# nxai-utilities

./: CMakeLists.txt  README.md
include/: musl_time.h  nxai_data_structures.h  nxai_data_utils.h  nxai_process_utils.h  nxai_shm_utils.h  nxai_socket_utils.h  sclbl_shm_utils.h  sclbl_socket_utils.h  socket_utils.h  yyjson.h
python-utilities/: communication_utils.py  requirements.txt
src/: nxai_data_utils.c  nxai_process_utils.c  nxai_shm_utils.c  nxai_socket_utils.c  sclbl_shm_utils.c  sclbl_socket_utils.c  socket_utils.c  yyjson.c
